--- a/frontend/src/app/bouteille/liste-bouteille/liste-bouteille.component.html
+++ b/frontend/src/app/bouteille/liste-bouteille/liste-bouteille.component.html
@@ -1,13 +1,14 @@
+
+
 <div class="body">
-  <!--<div class="search-box">
+  <div class="search-box">
     <i class="bx bx-search-alt"></i>
-     <input type="text" name="search" id="search" placeholder="Vin rouge" />
-  </div>-->
-  <h2 class="center">{{ cellier.nom }}</h2>
+    <input type="text" name="search" id="search" placeholder="Vin rouge" />
+  </div>
 
   <div class="title">
-    <!--<p>{{ bouteille.bouteille?.nom }}</p>-->
-    <a [routerLink]="['ajouter']"><span>Ajouter bouteille</span><mat-icon>add_circle</mat-icon></a>
+   <!--<p>{{ bouteille.bouteille?.nom }}</p>-->
+    <a [routerLink]="['ajouter']" ><span>Ajouter une bouteille</span><mat-icon>add_circle</mat-icon></a>
   </div>
 
   <div class="card">
@@ -17,23 +18,23 @@
         <mat-card-title>
           {{ bouteille.bouteille.nom }}
         </mat-card-title>
-        <a><i class='bx bx-x'></i></a>
+        <a (click)="openDialog(bouteille.bouteille_id,  bouteille.cellier_id, bouteille?.bouteille.bouteille_nom)"><i class='bx bx-x' ></i></a>
       </mat-card-header>
       <mat-card-content>
         <div class="description">
-          <p><strong>{{ bouteille.bouteille.bouteille_nom.substring(0, 10) + "..." }}</strong></p>
-          <p>{{ bouteille.bouteille.pays}}</p>
-          <p><strong>{{ bouteille.bouteille.format }}</strong></p>
-          <span><strong>$ {{ bouteille.bouteille.prix_saq }}</strong></span>
+          <a [routerLink]="['/cellier/' + bouteille.cellier_id+ '/bouteille/' + bouteille.bouteille_id]">
+            <p><strong>{{ bouteille.bouteille.bouteille_nom.substring(0, 10) + "..." }}</strong></p>
+            <p>{{ bouteille.bouteille.pays}}</p>
+            <p><strong>{{ bouteille.bouteille.format }}</strong></p>
+            <span><strong>$ {{ (bouteille.bouteille.prix_saq * bouteille.quantite).toFixed(2) }}</strong></span>
+          </a>
         </div>
-        <img mat-card-image [src]="bouteille.bouteille.image_url" alt="Photo of a Shiba Inu">
+        <img mat-card-image [src]="bouteille.bouteille.image_url" alt="vin img">
       </mat-card-content>
       <mat-card-footer>
-        <a><i class='bx bx-plus'
-            (click)="modifierQuantiteBouteille( bouteille.quantite + 1,bouteille.cellier_id,bouteille.bouteille_id)"></i></a>
+        <a><i class='bx bx-plus'  (click)="modifierQuantiteBouteille( bouteille.quantite + 1, bouteille.cellier_id, bouteille.bouteille_id)"></i></a>
         <span>{{ bouteille.quantite }}</span>
-        <a><i class='bx bx-minus'
-            (click)="modifierQuantiteBouteille( bouteille.quantite - 1,bouteille.cellier_id,bouteille.bouteille_id)"></i></a>
+        <a><i class='bx bx-minus' (click)="modifierQuantiteBouteille( bouteille.quantite - 1, bouteille.cellier_id, bouteille.bouteille_id)"></i></a>
       </mat-card-footer>
     </mat-card>
   </div>
