--- a/frontend/src/app/bouteille/modifier-bouteille/modifier-bouteille.component.html
+++ b/frontend/src/app/bouteille/modifier-bouteille/modifier-bouteille.component.html
@@ -1,1 +1,51 @@
-<p>modifier-bouteille works!</p>
+
+
+<div class="body">
+  <p><strong>Modifier la bouteille: </strong> {{ bouteilleCellier?.bouteille.bouteille_nom }}</p>
+
+  <form [formGroup]="formModifier" class="formulaire" (ngSubmit)="modifierBouteille()">
+
+    <mat-form-field class="">
+      <mat-label>Millesime</mat-label>
+      <input matInput type="number" formControlName="millesime">
+    </mat-form-field>
+
+    <mat-form-field class="">
+      <mat-label>Type</mat-label>
+      <input matInput type="text" [value]="bouteilleCellier?.bouteille.type.nom">
+    </mat-form-field>
+
+    <mat-form-field class="">
+      <mat-label>Pays</mat-label>
+      <input matInput type="text" [value]="bouteilleCellier?.bouteille.pays.nom">
+    </mat-form-field>
+
+    <mat-form-field class="">
+      <mat-label>Garde</mat-label>
+      <input matInput type="text" formControlName="garde_jusqua">
+    </mat-form-field>
+
+    <mat-form-field class="">
+      <mat-label>Date d'achat</mat-label>
+      <input matInput [matDatepicker]="picker" formControlName="date_achat">
+      <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+
+    <mat-form-field class="">
+      <mat-label>Quantité</mat-label>
+      <input matInput type="number" formControlName="quantite" >
+    </mat-form-field>
+
+    <mat-form-field class="">
+      <mat-label>Note</mat-label>
+      <input matInput type="text" formControlName="note">
+    </mat-form-field>
+
+    <div class="button">
+      <button type="submit">Modifier</button>
+    </div>
+  </form>
+</div>
+
+<app-footer-auth></app-footer-auth>
