Acces a page a-propos et ajustement de html/scss

--- a/frontend/src/app/auth/enregistrer/enregistrer.component.html
+++ b/frontend/src/app/auth/enregistrer/enregistrer.component.html
@@ -1,4 +1,9 @@
 <div class="body">
+
+  <div class="logo-container">
+    <a href="accueil"><img src="assets/vino-logo-black.svg" alt="Vino logo"></a>
+  </div>     
+
   <h2 class="smtitle center">Enregistrer</h2>
 
   <form class="example-form" [formGroup]="enregistrer" (ngSubmit)="enregistrerSubmit()">
