--- a/frontend/src/app/bouteille/ajouter-bouteille/ajouter-bouteille.component.html
+++ b/frontend/src/app/bouteille/ajouter-bouteille/ajouter-bouteille.component.html
@@ -2,9 +2,9 @@
 <div class="body">
   <div class="title">
     <!--<p>{{ bouteille.bouteille?.nom }}</p>-->
-     <a [routerLink]="['nonlister']" ><span>Ajouter une bouteille Non lister</span><mat-icon>add_circle</mat-icon></a>
+     <a [routerLink]="['nonlister']" ><span>Ajouter une bouteille personnelle (non listé)</span><mat-icon>add_circle</mat-icon></a>
    </div>
-  <p><strong>Ajouter un vin</strong></p>
+  <p><strong>Ajouter une bouteille Listé</strong></p>
   <div class="search-box">
     <i class="bx bx-search-alt"></i>
     <input type="text" placeholder="Rechercher une bouteille" matInput [formControl]="myControl"
