Ajustement de CSS, footer efface

--- a/frontend/src/app/cellier/liste-cellier/liste-cellier.component.scss
+++ b/frontend/src/app/cellier/liste-cellier/liste-cellier.component.scss
@@ -62,6 +62,7 @@
     height: 60vh;
     grid-template-columns: repeat(2, 1fr);
     align-items: baseline;
+    padding-bottom: 50px;
   }
 
   .card .empty-cellier {
