--- a/frontend/src/app/layout/footer-auth/footer-auth.component.scss
+++ b/frontend/src/app/layout/footer-auth/footer-auth.component.scss
@@ -1,6 +1,6 @@
 @media (min-width: 220px) {
   .footer {
-    //position: fixed;
+    position: fixed;
     bottom: 0;
     padding: 2% 9% 1rem;
     font-size: 1.6rem;
