Plusieurs ajustements dans le code

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-entete-auth></app-entete-auth>
 
-<router-outlet class="main"></router-outlet>
+<router-outlet class="main" style="padding-bottom: 500px;"></router-outlet>
+
+<app-footer-auth></app-footer-auth>
