--- a/frontend/src/app/auth/enregistrer/enregistrer.component.html
+++ b/frontend/src/app/auth/enregistrer/enregistrer.component.html
@@ -1,7 +1,7 @@
 <div class="body">
 
   <div class="logo-container">
-    <a href="accueil"><img src="assets/vino-logo-black.svg" alt="Vino logo"></a>
+    <a routerLink="/"><img src="assets/vino-logo-black.svg" alt="Vino logo"></a>
   </div>     
 
   <h2 class="smtitle center">Enregistrer</h2>
