--- a/frontend/src/app/bouteille/modifier-bouteille/modifier-bouteille.component.html
+++ b/frontend/src/app/bouteille/modifier-bouteille/modifier-bouteille.component.html
@@ -42,8 +42,10 @@
       <input matInput type="text" formControlName="note">
     </mat-form-field>
 
-    <div class="button">
-      <button type="submit">Modifier</button>
+    <div class="padding50 center">
+      <!-- <button type="submit">Modifier</button> -->
+      <button mat-raised-button class="mat-button-rounded"
+      routerLinkActive="actif">Modifier</button>
     </div>
   </form>
 </div>
