--- a/frontend/src/app/layout/a-propos/a-propos.component.html
+++ b/frontend/src/app/layout/a-propos/a-propos.component.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="vino-footer center">
-        <a href="accueil"><img src="assets/vino-logo-black.svg" alt="Vino logo" width="50"></a>
+        <a routerLink="/"><img src="assets/vino-logo-black.svg" alt="Vino logo" width="50"></a>
         <h3>Vino - Gestionnaire des bouteilles de vin à partir d’une application Web.</h3>
         <p>🍷</p>
     </div>
