--- a/frontend/src/app/layout/entete-auth/entete-auth.component.html
+++ b/frontend/src/app/layout/entete-auth/entete-auth.component.html
@@ -5,7 +5,7 @@
 
   <!-- <a href="#"><i class="arrow-left bx bx-left-arrow-alt"></i></a> -->
 
-  <a href="/accueil"><img src="assets/vino-logo-black.svg" alt="Vino logo" width="150"></a>
+  <a routerLink="/"><img src="assets/vino-logo-black.svg" alt="Vino logo" width="150"></a>
 
   <button mat-icon-button class="mat-button-rounded mat-raised-button" routerLink="#"
     routerLinkActive="actif"><mat-icon>shopping_basket</mat-icon></button>
