--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -103,9 +103,12 @@ body {
   justify-content: space-between;
 }
 
-
 .center {
   text-align: center;
+}
+
+.padding50 {
+  padding-bottom: 50px;
 }
 
 .mat-button-rounded {
