--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="body">
   <div class="logo-container">
-    <a href="accueil"><img src="assets/vino-logo-black.svg" alt="Vino logo"></a>
+    <a routerLink="/"><img src="assets/vino-logo-black.svg" alt="Vino logo"></a>
   </div>      
   <h2 class="smtitle center">Login</h2>
 
