--- a/frontend/src/app/bouteille/afficher-bouteille/afficher-bouteille.component.html
+++ b/frontend/src/app/bouteille/afficher-bouteille/afficher-bouteille.component.html
@@ -15,7 +15,7 @@
       <h1 class="title-produit">{{ bouteilleCellier?.bouteille.bouteille_nom }}</h1>
 
       <div class="resume-produit">
-        <img [src]="bouteilleCellier?.bouteille.image_url" alt="vin.png" />
+        <img [src]="bouteilleCellier?.bouteille.image_url" class="image_vin"  width="50" />
 
         <div class="resume">
           <h2>{{ bouteilleCellier?.bouteille.type.nom }}</h2>
