--- a/frontend/src/app/bouteille/afficher-bouteille/afficher-bouteille.component.scss
+++ b/frontend/src/app/bouteille/afficher-bouteille/afficher-bouteille.component.scss
@@ -20,7 +20,9 @@
     padding: 5%;
     border-radius: 50%;
   }
-
+.image_vin{
+  width: 200px !important;
+}
   /* CSS For Detail page*/
 
   .page .header {
