--- a/frontend/src/app/bouteille/ajout-bouteille-non-lister/ajout-bouteille-non-lister.component.html
+++ b/frontend/src/app/bouteille/ajout-bouteille-non-lister/ajout-bouteille-non-lister.component.html
@@ -33,9 +33,12 @@
     
     <mat-form-field class="">
       <mat-label>Description</mat-label>
-      <input matInput type="text"formControlName="description">
+      <input matInput type="text" formControlName="description">
     </mat-form-field>
-
+    <mat-form-field class="">
+      <mat-label>Format</mat-label>
+      <input matInput type="text" formControlName="format">
+    </mat-form-field>
     <mat-form-field class="">
       <mat-label>Prix</mat-label>
       <input matInput type="number" formControlName="prix" min="0">
