--- a/frontend/src/app/bouteille/ajouter-bouteille/ajouter-bouteille.component.html
+++ b/frontend/src/app/bouteille/ajouter-bouteille/ajouter-bouteille.component.html
@@ -29,7 +29,10 @@
       <mat-label>Millesime</mat-label>
       <input matInput type="number" formControlName="millesime" min="1800">
     </mat-form-field>
-
+    <mat-form-field class="">
+      <mat-label>Format</mat-label>
+      <input matInput type="text" disabled [value]="bouteilleSelected?.format">
+    </mat-form-field>
     <mat-form-field class="">
       <mat-label>Type</mat-label>
       <input matInput type="text" disabled [value]="bouteilleSelected?.type.nom">
