--- a/frontend/src/app/layout/a-propos/a-propos.component.html
+++ b/frontend/src/app/layout/a-propos/a-propos.component.html
@@ -28,7 +28,7 @@
         </ul>
     </div>
 
-    <div class="vino-footer center">
+    <div class="vino-footer center padding50">
         <a routerLink="/"><img src="assets/vino-logo-black.svg" alt="Vino logo" width="50"></a>
         <h3>Vino - Gestionnaire des bouteilles de vin à partir d’une application Web.</h3>
         <p>🍷</p>
