--- a/frontend/src/app/bouteille/afficher-bouteille/afficher-bouteille.component.scss
+++ b/frontend/src/app/bouteille/afficher-bouteille/afficher-bouteille.component.scss
@@ -1,4 +1,10 @@
 @media (min-width: 220px) {
+  .btnModifEfface {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+  }
+
   .page {
     padding-bottom: 100px;
   }
@@ -20,9 +26,9 @@
     padding: 5%;
     border-radius: 50%;
   }
-.image_vin{
-  width: 200px !important;
-}
+  .image_vin {
+    width: 200px !important;
+  }
   /* CSS For Detail page*/
 
   .page .header {
