--- a/frontend/src/app/bouteille/liste-bouteille/liste-bouteille.component.html
+++ b/frontend/src/app/bouteille/liste-bouteille/liste-bouteille.component.html
@@ -7,8 +7,10 @@
   </div> -->
 
   <div class="title">
+    <!-- <button mat-button [routerLink]="['/cellier/' + cellier_id + '/bouteille/' + bouteille_id +'/edit']" routerLinkActive="actif"><mat-icon>edit</mat-icon>Modifier</button> -->
+
    <!--<p>{{ bouteille.bouteille?.nom }}</p>-->
-    <a [routerLink]="['ajouter']" ><span>Ajouter une bouteille</span><mat-icon>add_circle</mat-icon></a>
+    <button mat-button [routerLink]="['ajouter']" ><mat-icon>add_circle</mat-icon>Ajouter une bouteille</button>
   </div>
 
   <div class="card">
@@ -18,7 +20,10 @@
         <mat-card-title>
           {{ bouteille.bouteille.nom }}
         </mat-card-title>
-        <a (click)="openDialog(bouteille.bouteille_id,  bouteille.cellier_id, bouteille?.bouteille.bouteille_nom)"><i class='bx bx-x' ></i></a>
+        <a (click)="openDialog(bouteille.bouteille_id,  bouteille.cellier_id, bouteille?.bouteille.bouteille_nom)">
+          <!-- <i class='bx bx-x' ></i> -->
+          <mat-icon color="warn">close</mat-icon>
+        </a>
       </mat-card-header>
       <mat-card-content>
         <div class="description">
@@ -40,4 +45,4 @@
   </div>
 </div>
 
-<app-footer-auth></app-footer-auth>
+<!-- <app-footer-auth></app-footer-auth> -->
