--- a/frontend/src/app/bouteille/modifier-bouteille/modifier-bouteille.component.html
+++ b/frontend/src/app/bouteille/modifier-bouteille/modifier-bouteille.component.html
@@ -12,12 +12,12 @@
 
     <mat-form-field class="">
       <mat-label>Type</mat-label>
-      <input matInput type="text" [value]="bouteilleCellier?.bouteille.type.nom">
+      <input matInput disabled type="text" [value]="bouteilleCellier?.bouteille.type.nom">
     </mat-form-field>
 
     <mat-form-field class="">
       <mat-label>Pays</mat-label>
-      <input matInput type="text" [value]="bouteilleCellier?.bouteille.pays.nom">
+      <input matInput disabled type="text" [value]="bouteilleCellier?.bouteille.pays.nom">
     </mat-form-field>
 
     <mat-form-field class="">
@@ -50,4 +50,4 @@
   </form>
 </div>
 
-<app-footer-auth></app-footer-auth>
+<!-- <app-footer-auth></app-footer-auth> -->
