--- a/frontend/src/app/layout/entete-auth/entete-auth.component.html
+++ b/frontend/src/app/layout/entete-auth/entete-auth.component.html
@@ -11,9 +11,9 @@
     routerLinkActive="actif"><mat-icon>shopping_basket</mat-icon></button>
 
   <!-- <a href="#"><i class="bx bxs-cart" data-content="0"></i></a> -->
-
 </div>
-
+<mat-progress-bar  *ngIf="loading" mode="indeterminate"></mat-progress-bar>
+<div>{{ message }}</div>
 <!--<div class="search-box">
     <mat-icon>search</mat-icon><input type="text" name="search" id="search" placeholder="Rechercher" />
   </div> -->
