--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,10 +1,11 @@
+
 /* You can add global styles to this file, and also import other style files */
 
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
 // Plus imports for other components in your app.
-
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
