--- a/frontend/src/app/bouteille/liste-bouteille/liste-bouteille.component.html
+++ b/frontend/src/app/bouteille/liste-bouteille/liste-bouteille.component.html
@@ -15,31 +15,29 @@
 
   <div class="card">
     <!-- <p class="empty-cellier" *ngIf="!bouteilles">Vous n'avez pas encore enregistrer de bouteille pour ce Cellier....</p> -->
-    <mat-card class="card-cellier" *ngFor="let bouteille of bouteilles">
+    <mat-card [routerLink]="['/cellier/' + bouteille.cellier_id+ '/bouteille/' + bouteille.bouteille_id]" class="card-cellier" *ngFor="let bouteille of bouteilles">
       <mat-card-header>
         <mat-card-title>
           {{ bouteille.bouteille.nom }}
         </mat-card-title>
-        <a (click)="openDialog(bouteille.bouteille_id,  bouteille.cellier_id, bouteille?.bouteille.bouteille_nom)">
-          <!-- <i class='bx bx-x' ></i> -->
-          <mat-icon color="warn">close</mat-icon>
-        </a>
+        <a class="fermer-icon" (click)="openDialog($event, bouteille.bouteille_id, bouteille.cellier_id, bouteille?.bouteille.bouteille_nom)"><i class='bx bx-x'></i></a>
       </mat-card-header>
+      
       <mat-card-content>
         <div class="description">
           <a [routerLink]="['/cellier/' + bouteille.cellier_id+ '/bouteille/' + bouteille.bouteille_id]">
             <p><strong>{{ bouteille.bouteille.bouteille_nom.substring(0, 10) + "..." }}</strong></p>
             <p>{{ bouteille.bouteille.pays}}</p>
-            <p><strong>{{ bouteille.bouteille.format }}</strong></p>
-            <span><strong>$ {{ (bouteille.bouteille.prix_saq ).toFixed(2) }}</strong></span>
+            <p>{{ bouteille.bouteille.format }}</p>
+            <span>$ {{ (bouteille.bouteille.prix_saq ).toFixed(2) }}</span>
           </a>
         </div>
         <img mat-card-image [src]="bouteille.bouteille.image_url" alt="vin img" >
       </mat-card-content>
       <mat-card-footer>
-        <a><i class='bx bx-plus'  (click)="modifierQuantiteBouteille( bouteille.quantite + 1, bouteille.cellier_id, bouteille.bouteille_id)"></i></a>
+        <a><i class='bx bx-plus'  (click)="modifierQuantiteBouteille($event, bouteille.quantite + 1, bouteille.cellier_id, bouteille.bouteille_id)"></i></a>
         <span>{{ bouteille.quantite }}</span>
-        <a><i class='bx bx-minus' (click)="modifierQuantiteBouteille( bouteille.quantite - 1, bouteille.cellier_id, bouteille.bouteille_id)"></i></a>
+        <a><i class='bx bx-minus' (click)="modifierQuantiteBouteille($event, bouteille.quantite - 1, bouteille.cellier_id, bouteille.bouteille_id)"></i></a>
       </mat-card-footer>
     </mat-card>
   </div>
