--- a/frontend/src/app/cellier/supprimer-cellier/supprimer-cellier.component.html
+++ b/frontend/src/app/cellier/supprimer-cellier/supprimer-cellier.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Suppression de Cellier</h1>
 <div mat-dialog-content>
-  Voulez-vous suppimer
+  Voulez-vous supprimer
   <hr>
   <strong>{{ nom }}</strong> ?
 </div>
