Correction CSS boutons et message

--- a/frontend/src/app/listeAchat/supprimer/supprimer.component.html
+++ b/frontend/src/app/listeAchat/supprimer/supprimer.component.html
@@ -6,5 +6,5 @@
 </div>
 <div mat-dialog-actions class="modal-footer">
   <button mat-button (click)="fermerBouteille()">Annuler</button>
-  <button mat-button class="supprimer" (click)="supprimerBouteille(bouteille_id)" >Supprimer</button>
+  <button mat-button class="supprimer" (click)="supprimerBouteille(bouteille_id)" color="warn">Supprimer</button>
 </div>
