--- a/frontend/src/app/cellier/supprimer-cellier/supprimer-cellier.component.html
+++ b/frontend/src/app/cellier/supprimer-cellier/supprimer-cellier.component.html
@@ -6,5 +6,5 @@
 </div>
 <div mat-dialog-actions class="modal-footer">
   <button mat-button (click)="fermerCellier()">Annuler</button>
-  <button mat-button class="supprimer" (click)="supprimerCellier(id)" >Supprimer</button>
+  <button mat-button class="supprimer" (click)="supprimerCellier(id)" color="warn">Supprimer</button>
 </div>
